# ds-jboard

./: .dockerignore  .editorconfig  .env  .envrc  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  reset-stack.cr
dockerfs/etc/: htoprc  profile  starship.toml  tmux.conf
dockerfs/etc/mc/: mc.ini
src/connexion/jboard/: README.md  pyproject.toml
src/connexion/jboard/src/jboard/: __init__.py  consumers.py  models.py
src/connexion/jboard/src/jboard/specs/: v1.yaml
src/connexion/jboard/src/jboard/viewsets/: positions.py
src/connexion/jboard/tests/: test_jboard.py
src/djrf/jboard/: README.md  pyproject.toml  setup.cfg
src/djrf/jboard/src/jboard/: __init__.py  consumers.py  models.py  schema.py  serializers.py  settings.py  urls.py  viewsets.py
src/djrf/jboard/src/jboard/migrations/: 0001_initial.py
src/vaui/jboard/: index.html  lws.config.js  package.json  prettier.config.js  tsconfig.json  vite.config.ts
src/vaui/jboard/src/: app.vue  errors.ts  main.ts  router.ts  shims.d.ts  store.ts
src/vaui/jboard/src/components/: v-aui-button.vue  v-aui-select.vue
src/vaui/jboard/src/pages/: detail.vue  list.vue
